W-18369243: Reintroduce JAR URLConnection cache disabling (#14365)
(cherry picked from commit 309cf7b666675b9b317daad8450de1434323f2ce)