@@ -6,19 +6,24 @@
  */
 package org.mule.runtime.module.artifact.api.classloader;
 
-import static java.lang.System.lineSeparator;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.sameInstance;
-import static org.hamcrest.CoreMatchers.startsWith;
-import static org.hamcrest.Matchers.contains;
-import static org.junit.Assert.assertEquals;
-import static org.junit.internal.matchers.ThrowableMessageMatcher.hasMessage;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 import static org.mule.runtime.module.artifact.api.classloader.ChildFirstLookupStrategy.CHILD_FIRST;
+import static org.mule.runtime.module.artifact.api.classloader.ChildOnlyLookupStrategy.CHILD_ONLY;
 import static org.mule.runtime.module.artifact.api.classloader.ParentFirstLookupStrategy.PARENT_FIRST;
 import static org.mule.runtime.module.artifact.api.classloader.ParentOnlyLookupStrategy.PARENT_ONLY;
 import static org.mule.tck.junit4.matcher.FunctionExpressionMatcher.expressionMatches;
+
+import static java.lang.System.lineSeparator;
+import static java.lang.Thread.currentThread;
+
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.sameInstance;
+import static org.hamcrest.CoreMatchers.startsWith;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.contains;
+import static org.junit.internal.matchers.ThrowableMessageMatcher.hasMessage;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+
 import org.mule.runtime.core.api.util.ClassUtils;
 import org.mule.runtime.module.artifact.api.classloader.exception.CompositeClassNotFoundException;
 import org.mule.tck.classlaoder.TestClassLoader;
@@ -30,6 +35,7 @@ import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
 
+import io.qameta.allure.Issue;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -45,16 +51,34 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
   @Rule
   public ExpectedException expected = ExpectedException.none();
 
+  /**
+   * Test to validate that we DO set useCache to false when loading resources from application plugins as this could generate file
+   * descriptor leaks once the application is un-deployed.
+   */
+  @Test
+  @Issue("W-18369243")
+  public void useCacheSetToFalseForJarUrlConnection() throws Exception {
+    URLClassLoader parent = new URLClassLoader(new URL[0], currentThread().getContextClassLoader());
+
+    final ClassLoaderLookupPolicy lookupPolicy = mock(ClassLoaderLookupPolicy.class);
+    when(lookupPolicy.getClassLookupStrategy(TEST_CLASS_NAME)).thenReturn(CHILD_ONLY);
+    FineGrainedControlClassLoader ext =
+        new FineGrainedControlClassLoader(new URL[] {getChildFileResource()}, parent, lookupPolicy);
+
+    URL url = ext.getResource(TEST_CLASS_PACKAGE);
+    assertThat(url.openConnection().getUseCaches(), is(false));
+  }
+
   @Test
   public void usesParentOnlyLookup() throws Exception {
-    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, Thread.currentThread().getContextClassLoader());
+    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, currentThread().getContextClassLoader());
 
     final ClassLoaderLookupPolicy lookupPolicy = mock(ClassLoaderLookupPolicy.class);
     when(lookupPolicy.getClassLookupStrategy(TEST_CLASS_NAME)).thenReturn(PARENT_ONLY);
     FineGrainedControlClassLoader ext =
         new FineGrainedControlClassLoader(new URL[] {getChildFileResource()}, parent, lookupPolicy);
 
-    assertEquals(EXPECTED_PARENT_MESSAGE, invokeTestClassMethod(ext));
+    assertThat(invokeTestClassMethod(ext), is(EXPECTED_PARENT_MESSAGE));
   }
 
   @Test
@@ -79,7 +103,7 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
 
   @Test
   public void usesParentFirstLookup() throws Exception {
-    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, Thread.currentThread().getContextClassLoader());
+    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, currentThread().getContextClassLoader());
 
     final ClassLoaderLookupPolicy lookupPolicy = mock(ClassLoaderLookupPolicy.class);
     when(lookupPolicy.getClassLookupStrategy(TEST_CLASS_NAME)).thenReturn(PARENT_FIRST);
@@ -87,12 +111,12 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
     FineGrainedControlClassLoader ext =
         new FineGrainedControlClassLoader(new URL[] {getChildFileResource()}, parent, lookupPolicy);
 
-    assertEquals(EXPECTED_PARENT_MESSAGE, invokeTestClassMethod(ext));
+    assertThat(invokeTestClassMethod(ext), is(EXPECTED_PARENT_MESSAGE));
   }
 
   @Test
   public void usesParentFirstThenChildLookup() throws Exception {
-    ClassLoader parent = Thread.currentThread().getContextClassLoader();
+    ClassLoader parent = currentThread().getContextClassLoader();
 
     final ClassLoaderLookupPolicy lookupPolicy = mock(ClassLoaderLookupPolicy.class);
     when(lookupPolicy.getClassLookupStrategy(TEST_CLASS_NAME)).thenReturn(PARENT_FIRST);
@@ -102,7 +126,7 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
     FineGrainedControlClassLoader ext =
         new FineGrainedControlClassLoader(new URL[] {getChildFileResource()}, parent, lookupPolicy);
 
-    assertEquals(EXPECTED_CHILD_MESSAGE, invokeTestClassMethod(ext));
+    assertThat(invokeTestClassMethod(ext), is(EXPECTED_CHILD_MESSAGE));
   }
 
   @Test
@@ -127,7 +151,7 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
 
   @Test
   public void usesChildFirstLookup() throws Exception {
-    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, Thread.currentThread().getContextClassLoader());
+    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, currentThread().getContextClassLoader());
 
     final ClassLoaderLookupPolicy lookupPolicy = mock(ClassLoaderLookupPolicy.class);
     when(lookupPolicy.getClassLookupStrategy(TEST_CLASS_NAME)).thenReturn(CHILD_FIRST);
@@ -137,19 +161,19 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
     FineGrainedControlClassLoader ext =
         new FineGrainedControlClassLoader(new URL[] {getChildFileResource()}, parent, lookupPolicy);
 
-    assertEquals(EXPECTED_CHILD_MESSAGE, invokeTestClassMethod(ext));
+    assertThat(invokeTestClassMethod(ext), is(EXPECTED_CHILD_MESSAGE));
   }
 
   @Test
   public void usesChildFirstThenParentLookup() throws Exception {
-    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, Thread.currentThread().getContextClassLoader());
+    URLClassLoader parent = new URLClassLoader(new URL[] {getParentResource()}, currentThread().getContextClassLoader());
 
     final ClassLoaderLookupPolicy lookupPolicy = mock(ClassLoaderLookupPolicy.class);
     when(lookupPolicy.getClassLookupStrategy(TEST_CLASS_NAME)).thenReturn(PARENT_FIRST);
 
     FineGrainedControlClassLoader ext = new FineGrainedControlClassLoader(new URL[0], parent, lookupPolicy);
 
-    assertEquals(EXPECTED_PARENT_MESSAGE, invokeTestClassMethod(ext));
+    assertThat(invokeTestClassMethod(ext), is(EXPECTED_PARENT_MESSAGE));
   }
 
   @Test
@@ -196,8 +220,8 @@ public class FineGrainedControlClassLoaderTestCase extends AbstractMuleTestCase 
   }
 
   private String invokeTestClassMethod(ClassLoader loader) throws Exception {
-    Class cls = loader.loadClass(TEST_CLASS_NAME);
+    Class<?> cls = loader.loadClass(TEST_CLASS_NAME);
     Method method = cls.getMethod("hi");
-    return (String) method.invoke(cls.newInstance());
+    return (String) method.invoke(cls.getDeclaredConstructor().newInstance());
   }
 }
